--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   name             : "Yang Dong Hoon"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "2020-2 OSS"
-  location         : "Somewhere"
+  location         : "SKKU"
   email            :
   links:
     - label: "Email"
