--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ analytics:
 author:
   name             : "Yang Dong Hoon"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "2020-2 OSS\n2017314216 "
+  bio              : "2020-2 OSS 2017314216"
   location         : "SKKU"
   email            :
   links:
