--- a/work/_config.yml
+++ b/work/_config.yml
@@ -23,7 +23,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Yang Dong Hoon"
 description              : "2020-2 OSS"
-url                      : "https://ydh4481.github.io"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://ydh4481.github.io/work/"# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : ""# the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
